webprofiler: uses an SQL formatter whenever possible

--- a/Resources/config/templating.yml
+++ b/Resources/config/templating.yml
@@ -39,3 +39,8 @@ services:
     public: false
     class: MakinaCorpus\Drupal\Sf\Twig\Extension\DrupalDateExtension
     tags: [{name: twig.extension}]
+
+  twig.extension.drupal_profiler:
+    public: false
+    class: MakinaCorpus\Drupal\Sf\Twig\Extension\ProfilerExtension
+    tags: [{name: twig.extension}]
