--- a/sf_dic.services.yml
+++ b/sf_dic.services.yml
@@ -23,6 +23,10 @@ services:
   request_stack:
     class: Symfony\Component\HttpFoundation\RequestStack
 
+  # Breadcrumb manager
+  breadcrumb:
+    class: Drupal\Core\Breadcrumb\BreadcrumbManager
+
   # Current logged in user, not exactly the same signature than Drupal 8
   # but will be API compatible for most use cases
   current_user:
