--- a/Resources/config/config.yml
+++ b/Resources/config/config.yml
@@ -14,7 +14,8 @@ framework:
         resource: "%kernel.root_dir%/config/routing.yml"
         strict_requirements: ~
     form:            ~
-    #csrf_protection: ~
+    csrf_protection: ~
+    session:         ~
     validation:      { enable_annotations: true }
     # templating:
     #     engines: ['twig']
