--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
         "symfony/http-foundation": "~3.0 <3.4",
         "symfony/http-kernel": "~3.0 <3.4",
         "symfony/routing": "~3.0 <3.4",
+        "symfony/security": "~3.0 <3.4",
         "symfony/templating": "~3.0 <3.4",
         "symfony/translation": "~3.0 <3.4",
         "symfony/yaml": "~2.8|~3.0 <3.4"
