--- a/Resources/docs/sample/config/config.yml
+++ b/Resources/docs/sample/config/config.yml
@@ -38,18 +38,21 @@ twig:
         - "IbanBundle:Form:fields.html.twig"
         - "FilechunkBundle:Form:fields.html.twig"
 
-doctrine:
-    dbal:
-        default_connection: default
-        connections:
-            default:
-                logging: "%kernel.debug%"
-                profiling: "%kernel.debug%"
-    orm:
-        # @todo cannot disable this until the cache warmer isn't full restored
-        auto_generate_proxy_classes: true
-        naming_strategy: doctrine.orm.naming_strategy.underscore
-        auto_mapping: true
-        mappings:
-            AppBundle:
-                type: annotation
+#
+# Uncomment to use doctrine
+#
+#doctrine:
+#    dbal:
+#        default_connection: default
+#        connections:
+#            default:
+#                logging: "%kernel.debug%"
+#                profiling: "%kernel.debug%"
+#    orm:
+#        # @todo cannot disable this until the cache warmer isn't full restored
+#        auto_generate_proxy_classes: true
+#        naming_strategy: doctrine.orm.naming_strategy.underscore
+#        auto_mapping: true
+#        mappings:
+#            AppBundle:
+#                type: annotation
