all services public property is now explicit: avoid triggering the error handler too often because of deprecation notices

--- a/Resources/config/annotations-degraded.yml
+++ b/Resources/config/annotations-degraded.yml
@@ -16,4 +16,5 @@ services:
         arguments: ['%kernel.cache_dir%/annotations']
 
     annotation_reader:
+        public: true
         alias: annotations.reader
