--- a/Resources/config/profiler.yml
+++ b/Resources/config/profiler.yml
@@ -1,11 +1,13 @@
 services:
 
     makinacorpus.drupal_database_collector:
+        public: true
         class: MakinaCorpus\Drupal\Sf\DataCollector\DrupalDatabaseDataCollector
         arguments: ["@database", '@?debug.stopwatch']
         tags: [{ name: data_collector, template: "module:sf_dic:Profiler/database.html.twig", id: drupal_database}]
 
     makinacorpus.drupal_watchdog_collector:
+        public: true
         class: MakinaCorpus\Drupal\Sf\DataCollector\DrupalWatchdogDataCollector
         arguments: ["@database", '@?debug.stopwatch']
         tags: [{ name: data_collector, template: "module:sf_dic:Profiler/watchdog.html.twig", id: drupal_watchdog}]
@@ -17,6 +19,7 @@ services:
         arguments: ['@makinacorpus.entity.manager_proxy.inner']
 
     makinacorpus.drupal_node_collector:
+        public: true
         class: MakinaCorpus\Drupal\Sf\DataCollector\DrupalNodeDataCollector
         arguments: ["@makinacorpus.entity.manager_proxy", '@?debug.stopwatch']
         tags: [{ name: data_collector, template: "module:sf_dic:Profiler/node-load.html.twig", id: drupal_node}]
