--- a/Resources/config/property_access.yml
+++ b/Resources/config/property_access.yml
@@ -1,5 +1,7 @@
 services:
-  property_accessor:
-    class: Symfony\Component\PropertyAccess\PropertyAccessor
-  Symfony\Component\PropertyAccess\PropertyAccessorInterface:
-    alias: property_accessor
+    property_accessor:
+        public: true
+        class: Symfony\Component\PropertyAccess\PropertyAccessor
+    Symfony\Component\PropertyAccess\PropertyAccessorInterface:
+        public: true
+        alias: property_accessor
