deprecate the [theme|module]:[name]:[PATH] twig resolver, instead use @[name]/[PATH]

--- a/Resources/config/profiler.yml
+++ b/Resources/config/profiler.yml
@@ -4,13 +4,13 @@ services:
         public: true
         class: MakinaCorpus\Drupal\Sf\DataCollector\DrupalDatabaseDataCollector
         arguments: ["@database", '@?debug.stopwatch']
-        tags: [{ name: data_collector, template: "module:sf_dic:Profiler/database.html.twig", id: drupal_database}]
+        tags: [{ name: data_collector, template: "@sf_dic/Profiler/database.html.twig", id: drupal_database}]
 
     makinacorpus.drupal_watchdog_collector:
         public: true
         class: MakinaCorpus\Drupal\Sf\DataCollector\DrupalWatchdogDataCollector
         arguments: ["@database", '@?debug.stopwatch']
-        tags: [{ name: data_collector, template: "module:sf_dic:Profiler/watchdog.html.twig", id: drupal_watchdog}]
+        tags: [{ name: data_collector, template: "@sf_dic/Profiler/watchdog.html.twig", id: drupal_watchdog}]
 
     makinacorpus.entity.manager_proxy:
         public: false
@@ -22,4 +22,4 @@ services:
         public: true
         class: MakinaCorpus\Drupal\Sf\DataCollector\DrupalNodeDataCollector
         arguments: ["@makinacorpus.entity.manager_proxy", '@?debug.stopwatch']
-        tags: [{ name: data_collector, template: "module:sf_dic:Profiler/node-load.html.twig", id: drupal_node}]
+        tags: [{ name: data_collector, template: "@sf_dic/Profiler/node-load.html.twig", id: drupal_node}]
