--- a/sf_dic.services.yml
+++ b/sf_dic.services.yml
@@ -243,7 +243,7 @@ services:
 
   # Custom node access helper
   sf_dic.node_access.subscriber:
-    public: false
+    public: true
     class: MakinaCorpus\Drupal\Sf\EventDispatcher\NodeAccessSubscriber
     arguments: ["@event_dispatcher"]
     tags: [{name: event_subscriber}]
