twig: realpath() and open_basedir() don't play well together.
Please read https://github.com/twigphp/Twig/issues/2707

a.k.a. "C'est moche, mais ça marche." (TM)

--- a/Resources/config/config.yml
+++ b/Resources/config/config.yml
@@ -26,6 +26,7 @@ framework:
 
 twig:
     debug:            "%kernel.debug%"
+    path:             "%kernel.root_dir%/Resources/views"
     strict_variables: false
     form_themes:
         - "bootstrap_3_layout.html.twig"
