twig: realpath() and open_basedir() don't play well together.
Please read https://github.com/twigphp/Twig/issues/2707

a.k.a. "C'est moche, mais ça marche." (TM)

--- a/Resources/docs/sample/symfony-3/config/config.yml
+++ b/Resources/docs/sample/symfony-3/config/config.yml
@@ -22,6 +22,7 @@ framework:
 
 twig:
     debug:            "%kernel.debug%"
+    path:             "%kernel.root_dir%/Resources/views"
     strict_variables: false
     form_themes:
         # Symfony's core form themes, last one if default one
