--- a/composer.json
+++ b/composer.json
@@ -35,16 +35,16 @@
     ],
     "require": {
         "psr/log": "1.*",
-        "symfony/config": "^3.4|~4.0",
-        "symfony/dependency-injection": "^3.4|~4.0",
-        "symfony/event-dispatcher": "^3.4|~4.0",
-        "symfony/expression-language": "^3.4|~4.0",
-        "symfony/http-foundation": "^3.4|~4.0",
-        "symfony/http-kernel": "^3.4|~4.0",
-        "symfony/routing": "^3.4|~4.0",
-        "symfony/security": "^3.4|~4.0",
-        "symfony/translation": "^3.4|~4.0",
-        "symfony/yaml": "^3.4|~4.0"
+        "symfony/config": "^3.4 || ~4.0",
+        "symfony/dependency-injection": "^3.4 || ~4.0",
+        "symfony/event-dispatcher": "^3.4 || ~4.0",
+        "symfony/expression-language": "^3.4 || ~4.0",
+        "symfony/http-foundation": "^3.4 || ~4.0",
+        "symfony/http-kernel": "^3.4 || ~4.0",
+        "symfony/routing": "^3.4 || ~4.0",
+        "symfony/security": "^3.4 || ~4.0",
+        "symfony/translation": "^3.4 || ~4.0",
+        "symfony/yaml": "^3.4 || ~4.0"
     },
     "suggests": {
         "jdorn/sql-formatter": "Prettifies SQL queries in the WebProfiler debug pane",
